// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders without crashing 1`] = `
<table>
  <tbody>
    <tr
      class="AssertionRow"
    >
      <td>
        
      </td>
      <td
        class="Assertion-Malignant"
      >
        Malicious
      </td>
      <td>
        Some virus
      </td>
      <td>
        10
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`shows Benign in the veridict column with false verdict 1`] = `
<table>
  <tbody>
    <tr
      class="AssertionRow"
    >
      <td>
        
      </td>
      <td
        class="Assertion-Benign"
      >
        Safe
      </td>
      <td>
        
      </td>
      <td>
        10
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`shows Malignant in the veridict column with true verdict 1`] = `
<table>
  <tbody>
    <tr
      class="AssertionRow"
    >
      <td>
        
      </td>
      <td
        class="Assertion-Malignant"
      >
        Malicious
      </td>
      <td>
        Some virus
      </td>
      <td>
        10
      </td>
    </tr>
  </tbody>
</table>
`;
